// Vitest Snapshot v1

exports[`Step > snapshot 1`] = `
"<div class=\\"ta-step ta-steps-item ta-horizontal-hairline finish\\">
  <div class=\\"ta-step_line\\"></div>
  <div class=\\"ta-step_index\\">0</div>
  <div class=\\"ta-step_inner\\">
    <!--v-if-->
    <div class=\\"ta-step_content\\"></div>
  </div>
</div>"
`;

exports[`Steps > snapshot 1`] = `"<div class=\\"ta-steps\\"></div>"`;

exports[`Steps > snapshot baseList 1`] = `
"<div class=\\"ta-steps\\">
  <div class=\\"ta-step ta-steps-item ta-horizontal-hairline active\\">
    <div class=\\"ta-step_line\\"></div>
    <div class=\\"ta-step_index\\">0</div>
    <div class=\\"ta-step_inner\\">
      <div class=\\"ta-step_title\\">title 1</div>
      <div class=\\"ta-step_content\\">content 1</div>
    </div>
  </div>
  <div class=\\"ta-step ta-steps-item ta-horizontal-hairline active\\">
    <div class=\\"ta-step_line\\"></div>
    <div class=\\"ta-step_index\\">0</div>
    <div class=\\"ta-step_inner\\">
      <div class=\\"ta-step_title\\">title 2</div>
      <div class=\\"ta-step_content\\">content 2</div>
    </div>
  </div>
  <div class=\\"ta-step ta-steps-item ta-horizontal-hairline active\\">
    <div class=\\"ta-step_line\\"></div>
    <div class=\\"ta-step_index\\">0</div>
    <div class=\\"ta-step_inner\\">
      <div class=\\"ta-step_title\\">title 3</div>
      <div class=\\"ta-step_content\\">content 3</div>
    </div>
  </div>
</div>"
`;
